--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,10 @@
     <version>1.0-SNAPSHOT</version>
     <description>探险家</description>
 
+    <properties>
+        <!--指定项目编码-->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+
 </project>
