--- a/pom.xml
+++ b/pom.xml
@@ -20,4 +20,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
+    <modules>
+        <module></module>
+    </modules>
 </project>
