字节码操作javassist

--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,6 @@
         <module>servlet3.0</module>
         <module>asm</module>
         <module>pkix-path-build-failed</module>
+        <module>javassist</module>
     </modules>
 </project>
