--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,6 @@
         <module>javassist</module>
         <module>function-expression-college</module>
         <module>guava-college</module>
+        <module>secret-util</module>
     </modules>
 </project>
