--- a/secret-util/pom.xml
+++ b/secret-util/pom.xml
@@ -62,6 +62,11 @@
             <version>4.8.2</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.13.3</version>
+        </dependency>
     </dependencies>
 
     <build>
