--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,6 @@
         <module>docker-college</module>
         <module>idea-docker</module>
         <module>webflux-college</module>
+        <module>redis-college</module>
     </modules>
 </project>
