--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,6 @@
         <module>idea-docker</module>
         <module>webflux-college</module>
         <module>redis-college</module>
+        <module>spring4</module>
     </modules>
 </project>
