--- a/pom.xml
+++ b/pom.xml
@@ -38,5 +38,6 @@
         <module>spring4</module>
         <module>spring5</module>
         <module>spring4-annotation</module>
+        <module>spring5-annotation</module>
     </modules>
 </project>
