配置文件准备

--- a/springboot-properties/src/main/resources/application.properties
+++ b/springboot-properties/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.profiles.include=dev,test
+server.port=8080
+
+
+
+#1.如果激活了带profile的配置文件，那么带profile的配置文件优先级最高
+
+#2.如果没有激活带profile的配置文件,那么对应的profile文件就不会生效
+
+
 
