--- a/springboot-starter/pom.xml
+++ b/springboot-starter/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>springboot-starter</artifactId>
+    <artifactId>starter-test</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>springboot-starter</name>
+    <name>starter-test</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -19,9 +19,17 @@
     </properties>
 
     <dependencies>
+
+        <!--引入自定义的starter-->
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>alex-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <dependency>
