--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,6 @@
         <module>springboot-principle</module>
         <module>springboot-mybatis</module>
         <module>springboot-jsp</module>
+        <module>springboot-jpa</module>
     </modules>
 </project>
