--- a/pom.xml
+++ b/pom.xml
@@ -55,5 +55,6 @@
         <module>kubernetes-college</module>
         <module>oauth2-college</module>
         <module>elasticsearch-college</module>
+        <module>aliyun-vue</module>
     </modules>
 </project>
