--- a/javafx-college/pom.xml
+++ b/javafx-college/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>javafx</groupId>
 
-    <artifactId>javafx-demo</artifactId>
+    <artifactId>javafx-college</artifactId>
     <packaging>jar</packaging>
 
     <properties>
