--- a/java-8/pom.xml
+++ b/java-8/pom.xml
@@ -12,9 +12,9 @@
     <artifactId>java-8</artifactId>
     <dependencies>
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
