--- a/A-Test/pom.xml
+++ b/A-Test/pom.xml
@@ -14,9 +14,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <version>RELEASE</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
             <scope>compile</scope>
         </dependency>
 
