--- a/pom.xml
+++ b/pom.xml
@@ -61,5 +61,7 @@
         <module>java-9</module>
         <module>java9demo</module>
         <module>java-11</module>
+        <module>java-12-13</module>
+        <module>java-14</module>
     </modules>
 </project>
