--- a/jpa-college/src/main/resources/application.properties
+++ b/jpa-college/src/main/resources/application.properties
@@ -20,3 +20,19 @@ hibernate.generate_statistics=true
 spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 
 
+#
+#create：表示每次加载Hibernate时都会删除上一次生成的表（包括数据），然后重新生成新表，即使两次没有任何修改也会这样执行。适用于每次执行单测前清空数据库的场景。
+#create-drop：表示每次加载Hibernate时都会生成表，但当SessionFactory关闭时，所生成的表将自动删除。
+#update：最常用的属性值，第一次加载Hibernate时创建数据表（前提是需要先有数据库），以后加载Hibernate时不会删除上一次生成的表，会根据实体更新，只新增字段，不会删除字段（即使实体中已经删除）。
+#validate：每次加载Hibernate时都会验证数据表结构，只会和已经存在的数据表进行比较，根据model修改表结构，但不会创建新表。
+#不配置此项，表示禁用自动建表功能
+#
+#
+#
+#
+#
+#
+#
+
+
+
