双向映射与单向映射

--- a/jpa-college/pom.xml
+++ b/jpa-college/pom.xml
@@ -67,11 +67,12 @@
             <version>1.1.22</version>
         </dependency>
 
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
+            <version>4.8.2</version>
+            <scope>compile</scope>
         </dependency>
 
         <!--jpa引入2级缓存-->
