--- a/spring5/pom.xml
+++ b/spring5/pom.xml
@@ -74,6 +74,12 @@
             <artifactId>spring-aop</artifactId>
             <version>5.2.1.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>5.2.7.RELEASE</version>
+        </dependency>
     </dependencies>
 
 
