--- a/java-jvm/pom.xml
+++ b/java-jvm/pom.xml
@@ -13,4 +13,13 @@
     <artifactId>java-jvm</artifactId>
     <description>jvm原理相关</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
 </project>
