--- a/A-Test/pom.xml
+++ b/A-Test/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.2-android</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
