--- a/redis-college/pom.xml
+++ b/redis-college/pom.xml
@@ -83,6 +83,12 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+        </dependency>
+
     </dependencies>
 
     <build>
