--- a/multi-thread/pom.xml
+++ b/multi-thread/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>spring-boot-starter-redis</artifactId>
             <version>1.4.7.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>2.4.1</version>
+        </dependency>
     </dependencies>
 
     <build>
