--- a/multi-thread/pom.xml
+++ b/multi-thread/pom.xml
@@ -51,6 +51,13 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>2.4.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
