--- a/A-TestWeb/pom.xml
+++ b/A-TestWeb/pom.xml
@@ -63,6 +63,21 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+
+        <!--swagger-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <!--增加swagger配置类，就可以使用了-->
+
     </dependencies>
 
     <build>
