--- a/A-Test/pom.xml
+++ b/A-Test/pom.xml
@@ -20,6 +20,7 @@
             <scope>compile</scope>
         </dependency>
 
+        <!--常用工具包，共三个-->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
@@ -31,6 +32,12 @@
             <version>28.2-android</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
