--- a/java-secret-util/pom.xml
+++ b/java-secret-util/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>java-secret-util</artifactId>
-    <description>机密技术</description>
+    <description>加密技术</description>
 
     <properties>
         <java.version>1.8</java.version>
