--- a/docker-college/Dockerfile
+++ b/docker-college/Dockerfile
@@ -5,7 +5,7 @@ FROM java:8
 MAINTAINER alex <jiahangSocket@gmail.com>
 
 #这里的 /tmp 目录就会在运行时自动挂载为匿名卷，任何向 /tmp 中写入的信息都不会记录进容器存储层
-VOLUME /tmp
+#VOLUME /tmp
 
 #复制上下文目录下的target/docker-college-0.0.1-SNAPSHOT.jar 到容器根目录里
 COPY target/docker-college-0.0.1-SNAPSHOT.jar /docker-college-0.0.1-SNAPSHOT.jar
