--- a/springboot-starter/pom.xml
+++ b/springboot-starter/pom.xml
@@ -22,9 +22,9 @@
 
         <!--引入自定义的starter-->
         <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>alex-spring-boot-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>com.example</groupId>
+            <artifactId>diy-spring-boot-starter-autoconfig</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
