--- a/A-Test/pom.xml
+++ b/A-Test/pom.xml
@@ -38,11 +38,11 @@
             <version>2.8.0</version>
         </dependency>
 
-       <!-- <dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.16</version>
-        </dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
