--- a/docker-college/DockerCompose/docker-compose.yml
+++ b/docker-college/DockerCompose/docker-compose.yml
@@ -1,5 +1,5 @@
 ###通过文本的方式，把要处理的容器按照顺序执行，如果是多容器也就是通过一条命令就搞定了[Docker Compose 是一个工具，命令行工具]
-
+###使用docker-compose 一次性管理多个容器的启动与管理
 version: '3.1'
 services:
   myshop-service-user-provider:
