--- a/A-TestWeb/pom.xml
+++ b/A-TestWeb/pom.xml
@@ -19,6 +19,20 @@
     </properties>
 
     <dependencies>
+
+        <!--retry async-->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+            <version>1.2.4.RELEASE</version>
+        </dependency>
+        <!---->
+
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
