--- a/thymeleaf-college/pom.xml
+++ b/thymeleaf-college/pom.xml
@@ -23,6 +23,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+
+        <!-- 配置处理器 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
         <dependency>
             <!--默认使用嵌入式的tomcat作为servlet容器-->
             <groupId>org.springframework.boot</groupId>
