--- a/spring-security/pom.xml
+++ b/spring-security/pom.xml
@@ -22,6 +22,7 @@
     </properties>
 
     <dependencies>
+<!--        使用spring-security-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
