--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 #服务端口号
 server.port=9000
 
@@ -29,5 +28,6 @@ spring.redis.jedis.pool.min-idle=0
 spring.redis.timeout=5000
 
 #Api请求地址
-api.http.addr=http://192.168.0.105:9001/api/v3/stat
-#api.http.addr=http://192.168.2.29/newlogin
+api.http.addr1=http://news.baidu.com/guonei
+api.http.addr2=http://news.baidu.com/guonei
+api.http.addr3=http://news.baidu.com/guonei
