--- a/seata2-springboot/src/main/resources/application.properties
+++ b/seata2-springboot/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.username=root
 spring.datasource.password=123456
 
 
+
+###Seata配置(此配置可以覆盖file.conf中的配置)#####################################################
+seata.service.grouplist.default=127.0.0.1:8091
+seata.service.vgroup-mapping.AsiaCloudShiro-group=default
